--- a/src/partials/filter-tags.html
+++ b/src/partials/filter-tags.html
@@ -1,32 +1,33 @@
 <!-- begin filter-tags -->
 <div class="filter-tags has-bd-bottom">
-  <button class="filter-tag">
+  <button class="filter-tag js-filter-tag is-active">
     <span class="filter-tag__lable">Все</span>
-    <i class="close-icon"></i>
+    <i class="close-icon js-filter-tag-close"></i>
   </button>
-  <button class="filter-tag">
+  <button class="filter-tag js-filter-tag">
     <span class="filter-tag__lable">Подвезти на машине</span>
-    <i class="close-icon"></i>
+    <i class="close-icon js-filter-tag-close"></i>
   </button>
-  <button class="filter-tag">
+  <button class="filter-tag js-filter-tag">
     <span class="filter-tag__lable">Профессиональная помощь</span>
-    <i class="close-icon"></i>
+    <i class="close-icon js-filter-tag-close"></i>
   </button>
-  <button class="filter-tag">
+  <button class="filter-tag js-filter-tag">
     <span class="filter-tag__lable">Юридическая помощь</span>
-    <i class="close-icon"></i>
+    <i class="close-icon js-filter-tag-close"></i>
   </button>
-  <button class="filter-tag">
+  <button class="filter-tag js-filter-tag">
     <span class="filter-tag__lable">Доставить из другой страны</span>
-    <i class="close-icon"></i>
+    <i class="close-icon js-filter-tag-close"></i>
   </button>
-  <button class="filter-tag">
+  <button class="filter-tag js-filter-tag">
     <span class="filter-tag__lable">Сопроводить</span>
-    <i class="close-icon"></i>
+    <i class="close-icon js-filter-tag-close"></i>
   </button>
-  <button class="filter-tag">
+  <button class="filter-tag js-filter-tag">
     <span class="filter-tag__lable">Другое</span>
-    <i class="close-icon"></i>
+    <i class="close-icon js-filter-tag-close"></i>
   </button>
+  <a href="#" class="filter-tags__more js-filter-tag-more">Ещё фильтры</a>
 </div>
 <!-- end filter-tags -->
