--- a/src/partials/filters-block-all.html
+++ b/src/partials/filters-block-all.html
@@ -21,34 +21,35 @@
     <div class="filters-block__filter-tags">
       <!-- begin filter-tags -->
       <div class="filter-tags">
-        <button class="filter-tag is-active">
+        <button class="filter-tag js-filter-tag is-active">
           <span class="filter-tag__lable">Все вместе</span>
-          <i class="close-icon"></i>
+          <i class="close-icon js-filter-tag-close"></i>
         </button>
-        <button class="filter-tag">
+        <button class="filter-tag js-filter-tag">
           <span class="filter-tag__lable">Помочь добраться на авто</span>
-          <i class="close-icon"></i>
+          <i class="close-icon js-filter-tag-close"></i>
         </button>
-        <button class="filter-tag">
+        <button class="filter-tag js-filter-tag">
           <span class="filter-tag__lable">Юридическая помощь</span>
-          <i class="close-icon"></i>
+          <i class="close-icon js-filter-tag-close"></i>
         </button>
-        <button class="filter-tag">
+        <button class="filter-tag js-filter-tag">
           <span class="filter-tag__lable">Сопроводить</span>
-          <i class="close-icon"></i>
+          <i class="close-icon js-filter-tag-close"></i>
         </button>
-        <button class="filter-tag">
+        <button class="filter-tag js-filter-tag">
           <span class="filter-tag__lable">Профессиональная помощь</span>
-          <i class="close-icon"></i>
+          <i class="close-icon js-filter-tag-close"></i>
         </button>
-        <button class="filter-tag">
+        <button class="filter-tag js-filter-tag">
           <span class="filter-tag__lable">Доставить из другой страны</span>
-          <i class="close-icon"></i>
+          <i class="close-icon js-filter-tag-close"></i>
         </button>
-        <button class="filter-tag">
+        <button class="filter-tag js-filter-tag">
           <span class="filter-tag__lable">Другое</span>
-          <i class="close-icon"></i>
+          <i class="close-icon js-filter-tag-close"></i>
         </button>
+        <a href="#" class="filter-tags__more js-filter-tag-more">Ещё фильтры</a>
       </div>
       <!-- end filter-tags -->
     </div>
@@ -56,10 +57,10 @@
 
   <div class="filters-block__bottom">
     <div class="filters-block__all"><p>Всего найдено волонтеров: 145</p></div>
-    <div class="filters-block__links">
-      <a href="#" class="filters-block__link is-active">Ближайшие</a>
-      <a href="#" class="filters-block__link">Новые</a>
-      <a href="#" class="filters-block__link">Срочные</a>
+    <div class="filters-block__links js-filter-tags">
+      <a href="#" class="filters-block__link js-filter-tag js-filter-tag-single is-active">Ближайшие</a>
+      <a href="#" class="filters-block__link js-filter-tag js-filter-tag-single">Новые</a>
+      <a href="#" class="filters-block__link js-filter-tag js-filter-tag-single">Срочные</a>
     </div>
   </div>
 
