--- a/src/partials/how-tabs.html
+++ b/src/partials/how-tabs.html
@@ -2,9 +2,9 @@
 <div class="how-tabs tabs">
 
   <div class="how-tabs__tabs tabs__tabs">
-    <span class="how-tabs__tab tabs__tab js-tab is-active" data-target-tab="1st">Для людей с инвалидностью</span>
-    <span class="how-tabs__tab tabs__tab js-tab" data-target-tab="2nd">Для помощников</span>
-    <span class="how-tabs__tab tabs__tab js-tab" data-target-tab="3nd">Для организаций</span>
+    <span class="how-tabs__tab tabs__tab js-tabs-btn is-active" data-target-tab="1st">Для людей с инвалидностью</span>
+    <span class="how-tabs__tab tabs__tab js-tabs-btn" data-target-tab="2nd">Для помощников</span>
+    <span class="how-tabs__tab tabs__tab js-tabs-btn" data-target-tab="3nd">Для организаций</span>
   </div>
 
   <div class="how-tabs__content tabs__content">
