--- a/src/sass/new-styles-2/_how.sass
+++ b/src/sass/new-styles-2/_how.sass
@@ -72,8 +72,15 @@
     &.is-active
       color: #fff
       background-image: linear-gradient(180deg, #ffa461 0%, #f67e25 100%)
+      &:last-child
+        &::before
+          display: block
       &::before
-        display: none
+        // display: none
+        left: -1px
+        right: auto
+        height: 100%
+        background-image: linear-gradient(180deg, #ffa461 0%, #f67e25 100%)
       &::after
         display: block
         +r3
@@ -92,12 +99,18 @@
     margin: 0 auto
     padding-left: 35px
     padding-right: 35px
-    display: none
+    height: 0
+    overflow: hidden
+    opacity: 0
+    +tr(opacity .3s)
     +r2
       padding-left: 20px
       padding-right: 20px
     &.is-active
-      display: block
+      opacity: 1
+      height: auto
+      overflow: auto
+      
 
 .how-block
   display: flex
