--- a/src/sass/new-styles-2/_main.sass
+++ b/src/sass/new-styles-2/_main.sass
@@ -52,6 +52,16 @@
       margin-bottom: 20px
   &.has-no-padding
     padding: 0
+  &__more
+    color: #353535
+    font-size: 14px
+    +med
+    text-decoration: underline
+    text-align: center
+    margin-bottom: 20px
+    display: none
+    &.is-active
+      display: block
 
 .filter-tag
   display: inline-block
@@ -83,13 +93,19 @@
   .close-icon
     +icon-close(8, 2, #fff)
     position: absolute
-    top: 6px
-    right: 7px
-  &:focus, &.is-active
+    top: 1px
+    right: 2px
+    margin: 5px
+    +r3
+      margin: 3px
+  &.is-active
     background-image: linear-gradient(180deg, #ffa461 0%, #f67e25 100%)
     color: #fff
+  &.is-hidden
+    display: none
   &.is-fz-smaller
     font-size: 14px
+
 
   &_fixed-width
     width: 230px
@@ -166,27 +182,41 @@
       text-align: center
 
 .mob-slider
+  padding-left: 90px
+  padding-right: 90px
+  +r3
+    padding-left: 30px
+    padding-right: 30px
   &__wrap
     position: relative
   &__prev,
   &__next
     display: none
     position: absolute
-    top: 67px
+    top: 97px
     background-color: transparent
-    .fa
-      font-size: 56px
-      color: $text
+    width: 40px
+    height: 40px
+    &::before
+      content: ''
+      position: absolute
+      top: 9px    
     +r2
       display: block
   &__prev
-    left: 32px
+    left: 30px
+    &::before
+      +icon-arrow(20, 20, 2, #000, 45)
+      left: 14px
     +r3
-      left: 13px
+      left: 0
   &__next
-    right: 43px
+    right: 30px
+    &::before
+      +icon-arrow(20, 20, 2, #000, -135)
+      left: 5px
     +r3
-      right: 21px
+      right: 0
 
 
 .helper
@@ -213,6 +243,8 @@
     +med
     color: $text
     margin-bottom: 17px
+    +r3
+      font-size: 18px
   &__social
     position: absolute
     bottom: -17px
@@ -314,7 +346,7 @@
     &.has-no-bd-bottom
       border-bottom: none
   &__title
-    +r3
+    +r2
       text-align: center
 
 .partners-slider
@@ -384,9 +416,7 @@
     +r3
       width: 50%
 
-.mob-slider
-  &__wrap
-    position: relative
+
 
 
 
