add some js, browser issues

--- a/src/partials/filter-tags.html
+++ b/src/partials/filter-tags.html
@@ -1,33 +1,47 @@
 <!-- begin filter-tags -->
 <div class="filter-tags has-bd-bottom">
-  <button class="filter-tag js-filter-tag is-active">
-    <span class="filter-tag__lable">Все</span>
+  <div class="filter-tag__wrap">
+    <button class="filter-tag js-filter-tag is-active">
+      <span class="filter-tag__lable">Все</span>      
+    </button>
     <i class="close-icon js-filter-tag-close"></i>
-  </button>
-  <button class="filter-tag js-filter-tag">
-    <span class="filter-tag__lable">Подвезти на машине</span>
+  </div>
+  <div class="filter-tag__wrap">
+    <button class="filter-tag js-filter-tag">
+      <span class="filter-tag__lable">Подвезти на машине</span>      
+    </button>
     <i class="close-icon js-filter-tag-close"></i>
-  </button>
-  <button class="filter-tag js-filter-tag">
-    <span class="filter-tag__lable">Профессиональная помощь</span>
+  </div>
+  <div class="filter-tag__wrap">
+    <button class="filter-tag js-filter-tag">
+      <span class="filter-tag__lable">Профессиональная помощь</span>      
+    </button>
     <i class="close-icon js-filter-tag-close"></i>
-  </button>
-  <button class="filter-tag js-filter-tag">
-    <span class="filter-tag__lable">Юридическая помощь</span>
+  </div>
+  <div class="filter-tag__wrap">
+    <button class="filter-tag js-filter-tag">
+      <span class="filter-tag__lable">Юридическая помощь</span>      
+    </button>
     <i class="close-icon js-filter-tag-close"></i>
-  </button>
-  <button class="filter-tag js-filter-tag">
-    <span class="filter-tag__lable">Доставить из другой страны</span>
+  </div>
+  <div class="filter-tag__wrap">
+    <button class="filter-tag js-filter-tag">
+      <span class="filter-tag__lable">Доставить из другой страны</span>      
+    </button>
     <i class="close-icon js-filter-tag-close"></i>
-  </button>
-  <button class="filter-tag js-filter-tag">
-    <span class="filter-tag__lable">Сопроводить</span>
+  </div>
+  <div class="filter-tag__wrap">
+    <button class="filter-tag js-filter-tag">
+      <span class="filter-tag__lable">Сопроводить</span>      
+    </button>
     <i class="close-icon js-filter-tag-close"></i>
-  </button>
-  <button class="filter-tag js-filter-tag">
-    <span class="filter-tag__lable">Другое</span>
+  </div>
+  <div class="filter-tag__wrap">
+    <button class="filter-tag js-filter-tag">
+      <span class="filter-tag__lable">Другое</span>      
+    </button>
     <i class="close-icon js-filter-tag-close"></i>
-  </button>
+  </div>
   <a href="#" class="filter-tags__more js-filter-tag-more">Ещё фильтры</a>
 </div>
 <!-- end filter-tags -->
