--- a/src/sass/new-styles-2/_request.sass
+++ b/src/sass/new-styles-2/_request.sass
@@ -66,10 +66,10 @@
 
   &:nth-child(3n-3)
     margin-right: 0
-  &:hover
+  +hover
     box-shadow: 0 1px 30px rgba(0, 0, 0, 0.1)
     .request-item__title
-      color: #ff8c61
+      color: #ff8c61    
   &__title
     font-size: 20px
     padding-bottom: 30px
@@ -211,7 +211,7 @@
       margin-bottom: 19px
       +r3
         text-align: left
-    &:hover
+    +hover
       box-shadow: none
     &__top
       border-bottom: 1px solid  $gray
