--- a/src/sass/new-styles-2/_main.sass
+++ b/src/sass/new-styles-2/_main.sass
@@ -72,10 +72,8 @@
   border-radius: 3px
   border: 1px solid $gray
   min-width: 120px
-  padding: 10px 35px
-  margin-right: 20px  
+  padding: 10px 35px    
   background-color: transparent
-  position: relative
   +r2
     padding-left: 30px
     padding-right: 30px
@@ -89,15 +87,7 @@
     padding-left: 10px
     padding-right: 10px
     &:nth-child(3n-3)
-      margin-right: 10px
-  .close-icon
-    +icon-close(8, 2, #fff)
-    position: absolute
-    top: 1px
-    right: 2px
-    margin: 5px
-    +r3
-      margin: 3px
+      margin-right: 10px  
   &.is-active
     background-image: linear-gradient(180deg, #ffa461 0%, #f67e25 100%)
     color: #fff
@@ -105,6 +95,19 @@
     display: none
   &.is-fz-smaller
     font-size: 14px
+  &__wrap
+    display: inline-block
+    position: relative
+    margin-right: 20px
+    .close-icon
+      +icon-close(8, 2, #fff)
+      position: absolute
+      z-index: 1
+      top: 1px
+      right: 2px
+      margin: 5px
+      +r3
+        margin: 3px
 
 
   &_fixed-width
@@ -182,8 +185,9 @@
       text-align: center
 
 .mob-slider
-  padding-left: 90px
-  padding-right: 90px
+  +r2
+    padding-left: 90px
+    padding-right: 90px  
   +r3
     padding-left: 30px
     padding-right: 30px
