safari svg icons issues

--- a/src/partials/filters-block.html
+++ b/src/partials/filters-block.html
@@ -21,19 +21,19 @@
     <div class="filters-block__filter-tags">
       <!-- begin filter-tags -->
       <div class="filter-tags js-filter-tags">
-        <div class="filter-tag__wrap">
+        <div class="filter-tag__wrap is-fixed-width">
           <button class="filter-tag js-filter-tag js-filter-tag-single filter-tag_fixed-width is-active">
             <span class="filter-tag__lable">Все</span>      
           </button>
           <i class="close-icon js-filter-tag-close"></i>
         </div>
-        <div class="filter-tag__wrap">
+        <div class="filter-tag__wrap is-fixed-width">
           <button class="filter-tag js-filter-tag js-filter-tag-single filter-tag_fixed-width">
             <span class="filter-tag__lable">Только от организаций</span>      
           </button>
           <i class="close-icon js-filter-tag-close"></i>
         </div>
-        <div class="filter-tag__wrap">
+        <div class="filter-tag__wrap is-fixed-width">
           <button class="filter-tag js-filter-tag js-filter-tag-single filter-tag_fixed-width">
             <span class="filter-tag__lable">Только частные</span>      
           </button>
