--- a/src/sass/new-styles-2/_main.sass
+++ b/src/sass/new-styles-2/_main.sass
@@ -77,17 +77,16 @@
   +r2
     padding-left: 30px
     padding-right: 30px
-    &:nth-child(3n-3)
-      margin-right: 0
+    // &:nth-child(3n-3)
+    //   margin-right: 0
   +r3
     font-size: 12px
     padding-top: 7px
-    padding-bottom: 7px
-    margin-right: 10px
+    padding-bottom: 7px    
     padding-left: 10px
     padding-right: 10px
-    &:nth-child(3n-3)
-      margin-right: 10px  
+    // &:nth-child(3n-3)
+    //   margin-right: 10px  
   &.is-active
     background-image: linear-gradient(180deg, #ffa461 0%, #f67e25 100%)
     color: #fff
@@ -108,7 +107,25 @@
       margin: 5px
       +r3
         margin: 3px
-
+    +r2
+      &:nth-child(3n-3)
+        margin-right: 0
+    +r3
+      margin-right: 10px
+      &:nth-child(3n-3)
+        margin-right: 10px
+    &.is-fixed-width
+      width: 230px
+      +r1
+        width: auto
+        min-width: 210px
+        margin-bottom: 6px
+      +r3
+        width: 100%
+        margin-bottom: 11px
+    &.is-mob-full
+      +r3
+        margin-right: 0
 
   &_fixed-width
     width: 230px
@@ -120,13 +137,11 @@
       min-width: 210px
       padding-left: 21px
       padding-right: 21px
-      margin-bottom: 6px
     +r2
       padding-left: 21px
       padding-right: 21px
     +r3
       width: 100%
-      margin-bottom: 11px
   &_mob-full
     +r3
       width: 100%
