--- a/src/sass/new-styles-2/_catalog.sass
+++ b/src/sass/new-styles-2/_catalog.sass
@@ -362,7 +362,8 @@
     display: inline-block
     margin-right: 10px
     vertical-align: top
-    svg
+    svg, img
+      display: inline-block
       margin-right: 5px
     span
       position: relative
