--- a/src/sass/new-style-2.sass
+++ b/src/sass/new-style-2.sass
@@ -200,6 +200,7 @@ $gray: #d8d8d8
       margin-top: -3px
       +arr(12,6, #000, b)
       z-index: 1
+      pointer-events: none
     .select__text
       +reg
       font-size: 14px
