--- a/src/sass/new-styles-2/_request.sass
+++ b/src/sass/new-styles-2/_request.sass
@@ -156,7 +156,7 @@
     +r3
       left: -6px
       right: auto
-      top: 80px
+      top: 60px
   &__map-btn
     color: $orange
     font-size: 12px
@@ -234,6 +234,7 @@
       +reg
       color: $orange
       margin-bottom: 40px
+      width: 100%
       display: none
       &.is-active
         display: block
