upd container, header layout; small edits

--- a/src/partials/header-container.html
+++ b/src/partials/header-container.html
@@ -1,5 +1,5 @@
 <a href="#" class="top-banner" style="background-image: url(img/top-banner.jpg);"></a>
-<header class="header header_volonter js-header">
+<header class="header header_container js-header">
   <div class="header__fixed">
     <a href="#" class="logo">
       <i class="icon-logo"></i>
