--- a/src/sass/new-styles-2/_request.sass
+++ b/src/sass/new-styles-2/_request.sass
@@ -233,13 +233,14 @@
       font-size: 14px
       +reg
       color: $orange
-      margin-bottom: 40px
-      width: 100%
+      a
+        color: inherit
+    &__link-in-text
       display: none
       &.is-active
         display: block
-      a
-        color: inherit
+        width: 100%
+        margin-bottom: 40px
     &__left
       padding-top: 19px        
       position: relative
