--- a/src/sass/new-styles-2/_topbar.sass
+++ b/src/sass/new-styles-2/_topbar.sass
@@ -2,6 +2,9 @@
   background-color: #f5f7f7
   +r1
     display: none
+  .container
+    +r(1590)
+      max-width: 1050px
   &__inner
     +clr
   &__nav
