--- a/src/partials/catalog-list.html
+++ b/src/partials/catalog-list.html
@@ -10,7 +10,7 @@
   </div>
 
   <!-- begin catalog-item -->
-  <div class="catalog-item">
+  <div class="catalog-item js-open-popup" data-link="popup-catalog">
     <div class="catalog-item__person">
       <div class="catalog-item__img" style="background-image: url('img/volonter/user/user-catalog-1.jpg');">
         <div class="catalog-item__img-icon is-active"><i class="fa fa-check"></i></div>
@@ -69,7 +69,7 @@
   <!-- end catalog-item -->
 
   <!-- begin catalog-item -->
-  <div class="catalog-item">
+  <div class="catalog-item js-open-popup" data-link="popup-catalog">
     <div class="catalog-item__person">
       <div class="catalog-item__img" style="background-image: url('img/volonter/user/user-catalog-2.jpg');">
         <div class="catalog-item__img-icon"><i class="fa fa-check"></i></div>
@@ -125,7 +125,7 @@
   <!-- end catalog-item -->
 
   <!-- begin catalog-item -->
-  <div class="catalog-item">
+  <div class="catalog-item js-open-popup" data-link="popup-catalog">
     <div class="catalog-item__person">
       <div class="catalog-item__img" style="background-image: url('img/volonter/user/user-catalog-2.jpg');">
         <div class="catalog-item__img-icon"><i class="fa fa-check"></i></div>
