--- a/src/partials/header-container-user.html
+++ b/src/partials/header-container-user.html
@@ -5,7 +5,7 @@
     <a href="#" class="logo">
       <i class="icon-logo"></i>
     </a>
-    <button class="btn-nav js-nav-btn" data-id="main-nav">
+    <button class="btn-nav">
       <span></span>
     </button>
     <div class="header__inner">
@@ -72,7 +72,7 @@
         <a href="#" class="btn-out">
           <i class="fa fa-sign-out"></i>
         </a>
-        <a href="#" class="btn-profile js-nav-btn is-profile"  data-id="user-nav">
+        <a href="#" class="btn-profile is-profile">
           <i></i>
           <div class="btn-profile__img" style="background-image: url(https://placecage.com/50/50);"></div>
           <span>Профайл</span>
