upd catalog-short-hover item adaptive

--- a/src/partials/applications-user.html
+++ b/src/partials/applications-user.html
@@ -125,7 +125,7 @@
           Впервые принял заявку<br>
           <strong>Пока нет рекомендаций</strong>
         </div>
-        <div class="catalog-item__type"><span><img src="img/volonter/catalog-type-img.png" alt="" width="30" height="30">Фонд "Первая помощь"</span></div>
+        <div class="catalog-item__type"><span><img src="img/volonter/catalog-type-img.png" alt="" width="30" height="30"><strong>Фонд "Первая помощь"</strong></span></div>
       </div>
       <div class="catalog-item_short-hover__descr">
         <p>Буду рад оказать Вам помощь! Свободен в указанный промежуток времени.</p>
@@ -507,7 +507,7 @@
           Впервые принял заявку<br>
           <strong>Пока нет рекомендаций</strong>
         </div>
-        <div class="catalog-item__type"><span><img src="img/volonter/catalog-type-img.png" alt="" width="30" height="30">Фонд "Первая помощь"</span></div>
+        <div class="catalog-item__type"><span><img src="img/volonter/catalog-type-img.png" alt="" width="30" height="30"><strong>Фонд "Первая помощь"</strong></span></div>
       </div>
       <div class="catalog-item_short-hover__descr">
         <p>Буду рад оказать Вам помощь! Свободен в указанный промежуток времени.</p>
@@ -888,7 +888,7 @@
           Впервые принял заявку<br>
           <strong>Пока нет рекомендаций</strong>
         </div>
-        <div class="catalog-item__type"><span><img src="img/volonter/catalog-type-img.png" alt="" width="30" height="30">Фонд "Первая помощь"</span></div>
+        <div class="catalog-item__type"><span><img src="img/volonter/catalog-type-img.png" alt="" width="30" height="30"><strong>Фонд "Первая помощь"</strong></span></div>
       </div>
       <div class="catalog-item_short-hover__descr">
         <p>Буду рад оказать Вам помощь! Свободен в указанный промежуток времени.</p>
