--- a/src/partials/filters-block-all.html
+++ b/src/partials/filters-block-all.html
@@ -22,43 +22,43 @@
       <!-- begin filter-tags -->
       <div class="filter-tags">
         <div class="filter-tag__wrap">
-          <button class="filter-tag js-filter-tag is-active">
+          <button class="filter-tag is-padding-smaller js-filter-tag is-active">
             <span class="filter-tag__lable">Все вместе</span>      
           </button>
           <i class="close-icon js-filter-tag-close"></i>
         </div>
         <div class="filter-tag__wrap">
-          <button class="filter-tag js-filter-tag ">
+          <button class="filter-tag is-padding-smaller js-filter-tag ">
             <span class="filter-tag__lable">Помочь добраться на авто</span>      
           </button>
           <i class="close-icon js-filter-tag-close"></i>
         </div>
         <div class="filter-tag__wrap">
-          <button class="filter-tag js-filter-tag ">
+          <button class="filter-tag is-padding-smaller js-filter-tag ">
             <span class="filter-tag__lable">Юридическая помощь</span>      
           </button>
           <i class="close-icon js-filter-tag-close"></i>
         </div>
         <div class="filter-tag__wrap">
-          <button class="filter-tag js-filter-tag ">
+          <button class="filter-tag is-padding-smaller js-filter-tag ">
             <span class="filter-tag__lable">Сопроводить</span>      
           </button>
           <i class="close-icon js-filter-tag-close"></i>
         </div>
         <div class="filter-tag__wrap">
-          <button class="filter-tag js-filter-tag ">
+          <button class="filter-tag is-padding-smaller js-filter-tag ">
             <span class="filter-tag__lable">Профессиональная помощь</span>      
           </button>
           <i class="close-icon js-filter-tag-close"></i>
         </div>
         <div class="filter-tag__wrap">
-          <button class="filter-tag js-filter-tag ">
+          <button class="filter-tag is-padding-smaller js-filter-tag ">
             <span class="filter-tag__lable">Доставить из другой страны</span>      
           </button>
           <i class="close-icon js-filter-tag-close"></i>
         </div>
         <div class="filter-tag__wrap">
-          <button class="filter-tag js-filter-tag ">
+          <button class="filter-tag is-padding-smaller js-filter-tag ">
             <span class="filter-tag__lable">Другое</span>      
           </button>
           <i class="close-icon js-filter-tag-close"></i>
