--- a/src/sass/new-styles-2/_main.sass
+++ b/src/sass/new-styles-2/_main.sass
@@ -95,6 +95,12 @@
     display: none
   &.is-fz-smaller
     font-size: 14px
+  &.is-padding-smaller
+    padding-left: 25px
+    padding-right: 25px
+    +r2
+      padding-left: 18px
+      padding-right: 18px
   &__wrap
     display: inline-block
     position: relative
@@ -124,6 +130,7 @@
       +r3
         width: 100%
         margin-bottom: 11px
+
     &.is-mob-full
       +r3
         margin-right: 0
