--- a/src/partials/catalog-list.html
+++ b/src/partials/catalog-list.html
@@ -119,7 +119,7 @@
     </div>
     <div class="catalog-item__type">
       <span class="catalog-item__head-mob-item">Тип</span>
-      <span><img src="img/volonter/catalog-type-img.png" alt="" width="30" height="30">Фонд "Первая помощь"</span>
+      <span><img src="img/volonter/catalog-type-img.png" alt="" width="30" height="30"><strong>Фонд "Первая помощь"</strong></span>
     </div>
   </div>
   <!-- end catalog-item -->
@@ -175,7 +175,7 @@
     </div>
     <div class="catalog-item__type">
       <span class="catalog-item__head-mob-item">Тип</span>
-      <span><img src="img/volonter/catalog-type-img.png" alt="" width="30" height="30">Фонд "Первая помощь"</span>
+      <span><img src="img/volonter/catalog-type-img.png" alt="" width="30" height="30"><strong>Фонд "Первая помощь"</strong></span>
     </div>
   </div>
   <!-- end catalog-item -->
