--- a/src/partials/applications-user.html
+++ b/src/partials/applications-user.html
@@ -69,12 +69,14 @@
             <a href="#">
               <img src="img/svg-icons/tablet-check.svg" alt="" width="16" height="20">
               <span>12</span>
+              <span class="tooltip">Lorem ipsum dolor.</span>
             </a>
           </div>
           <div class="catalog-item__rating-block">
             <a href="#">
               <img src="img/svg-icons/thumb-up.svg" alt="" width="21" height="20">
               <span>12</span>
+              <span class="tooltip">Lorem ipsum dolor.</span>
             </a>
           </div>
         </div>
@@ -450,12 +452,14 @@
             <a href="#">
               <img src="img/svg-icons/tablet-check.svg" alt="" width="16" height="20">
               <span>12</span>
+              <span class="tooltip">Lorem ipsum dolor.</span>
             </a>
           </div>
           <div class="catalog-item__rating-block">
             <a href="#">
               <img src="img/svg-icons/thumb-up.svg" alt="" width="21" height="20">
               <span>12</span>
+              <span class="tooltip">Lorem ipsum dolor.</span>
             </a>
           </div>
         </div>
@@ -831,12 +835,14 @@
             <a href="#">
               <img src="img/svg-icons/tablet-check.svg" alt="" width="16" height="20">
               <span>12</span>
+              <span class="tooltip">Lorem ipsum dolor.</span>
             </a>
           </div>
           <div class="catalog-item__rating-block">
             <a href="#">
               <img src="img/svg-icons/thumb-up.svg" alt="" width="21" height="20">
               <span>12</span>
+              <span class="tooltip">Lorem ipsum dolor.</span>
             </a>
           </div>
         </div>
