--- a/src/partials/applications.html
+++ b/src/partials/applications.html
@@ -32,7 +32,10 @@
         <a href="#" class="request-item_big__link request-item_big__link-in-text js-show-link">Читать Далее</a>
         <a href="#" class="request-item_big__link request-item_big__link-in-text js-hide-link">Скрыть</a>
         <div class="request-item__person">
-          <div class="request-item__person-img" style="background-image: url('img/volonter/user/user-1.jpg');"></div>
+          <div class="request-item__person-img" style="background-image: url('img/volonter/user/user-1.jpg');">
+            <div class="request-item__img-icon is-active"><i class="fa fa-check"></i></div>
+            <div class="request-item__tooltip is-active">Lorem ipsum dolor.</div>
+          </div>
           <div class="request-item__person-name">
             Алексей Д. М.
             <span>Добавлено: 5 минут назад</span>
@@ -103,7 +106,10 @@
         <a href="#" class="request-item_big__link request-item_big__link-in-text js-show-link">Читать Далее</a>
         <a href="#" class="request-item_big__link request-item_big__link-in-text js-hide-link">Скрыть</a>
         <div class="request-item__person">
-          <div class="request-item__person-img" style="background-image: url('img/volonter/user/user-1.jpg');"></div>
+          <div class="request-item__person-img" style="background-image: url('img/volonter/user/user-1.jpg');">
+            <div class="request-item__img-icon"><i class="fa fa-check"></i></div>
+            <div class="request-item__tooltip">Lorem ipsum dolor.</div>
+          </div>
           <div class="request-item__person-name">
             Алексей Д. М.
             <span>Добавлено: 5 минут назад</span>
@@ -174,7 +180,10 @@
         <a href="#" class="request-item_big__link request-item_big__link-in-text js-show-link">Читать Далее</a>
         <a href="#" class="request-item_big__link request-item_big__link-in-text js-hide-link">Скрыть</a>
         <div class="request-item__person">
-          <div class="request-item__person-img" style="background-image: url('img/volonter/user/user-1.jpg');"></div>
+          <div class="request-item__person-img" style="background-image: url('img/volonter/user/user-1.jpg');">
+            <div class="request-item__img-icon"><i class="fa fa-check"></i></div>
+            <div class="request-item__tooltip">Lorem ipsum dolor.</div>
+          </div>
           <div class="request-item__person-name">
             Алексей Д. М.
             <span>Добавлено: 5 минут назад</span>
@@ -245,7 +254,10 @@
         <a href="#" class="request-item_big__link request-item_big__link-in-text js-show-link">Читать Далее</a>
         <a href="#" class="request-item_big__link request-item_big__link-in-text js-hide-link">Скрыть</a>
         <div class="request-item__person">
-          <div class="request-item__person-img" style="background-image: url('img/volonter/user/user-1.jpg');"></div>
+          <div class="request-item__person-img" style="background-image: url('img/volonter/user/user-1.jpg');">
+            <div class="request-item__img-icon"><i class="fa fa-check"></i></div>
+            <div class="request-item__tooltip">Lorem ipsum dolor.</div>
+          </div>
           <div class="request-item__person-name">
             Алексей Д. М.
             <span>Добавлено: 5 минут назад</span>
@@ -316,7 +328,10 @@
         <a href="#" class="request-item_big__link request-item_big__link-in-text js-show-link">Читать Далее</a>
         <a href="#" class="request-item_big__link request-item_big__link-in-text js-hide-link">Скрыть</a>
         <div class="request-item__person">
-          <div class="request-item__person-img" style="background-image: url('img/volonter/user/user-1.jpg');"></div>
+          <div class="request-item__person-img" style="background-image: url('img/volonter/user/user-1.jpg');">
+            <div class="request-item__img-icon"><i class="fa fa-check"></i></div>
+            <div class="request-item__tooltip">Lorem ipsum dolor.</div>
+          </div>
           <div class="request-item__person-name">
             Алексей Д. М.
             <span>Добавлено: 5 минут назад</span>
@@ -391,7 +406,10 @@
         <a href="#" class="request-item_big__link request-item_big__link-in-text js-show-link">Читать Далее</a>
         <a href="#" class="request-item_big__link request-item_big__link-in-text js-hide-link">Скрыть</a>
         <div class="request-item__person">
-          <div class="request-item__person-img" style="background-image: url('img/volonter/user/user-1.jpg');"></div>
+          <div class="request-item__person-img" style="background-image: url('img/volonter/user/user-1.jpg');">
+            <div class="request-item__img-icon"><i class="fa fa-check"></i></div>
+            <div class="request-item__tooltip">Lorem ipsum dolor.</div>
+          </div>
           <div class="request-item__person-name">
             Алексей Д. М.
             <span>Добавлено: 5 минут назад</span>
@@ -462,7 +480,10 @@
         <a href="#" class="request-item_big__link request-item_big__link-in-text js-show-link">Читать Далее</a>
         <a href="#" class="request-item_big__link request-item_big__link-in-text js-hide-link">Скрыть</a>
         <div class="request-item__person">
-          <div class="request-item__person-img" style="background-image: url('img/volonter/user/user-1.jpg');"></div>
+          <div class="request-item__person-img" style="background-image: url('img/volonter/user/user-1.jpg');">
+            <div class="request-item__img-icon"><i class="fa fa-check"></i></div>
+            <div class="request-item__tooltip">Lorem ipsum dolor.</div>
+          </div>
           <div class="request-item__person-name">
             Алексей Д. М.
             <span>Добавлено: 5 минут назад</span>
@@ -533,7 +554,10 @@
         <a href="#" class="request-item_big__link request-item_big__link-in-text js-show-link">Читать Далее</a>
         <a href="#" class="request-item_big__link request-item_big__link-in-text js-hide-link">Скрыть</a>
         <div class="request-item__person">
-          <div class="request-item__person-img" style="background-image: url('img/volonter/user/user-1.jpg');"></div>
+          <div class="request-item__person-img" style="background-image: url('img/volonter/user/user-1.jpg');">
+            <div class="request-item__img-icon"><i class="fa fa-check"></i></div>
+            <div class="request-item__tooltip">Lorem ipsum dolor.</div>
+          </div>
           <div class="request-item__person-name">
             Алексей Д. М.
             <span>Добавлено: 5 минут назад</span>
@@ -604,7 +628,10 @@
         <a href="#" class="request-item_big__link request-item_big__link-in-text js-show-link">Читать Далее</a>
         <a href="#" class="request-item_big__link request-item_big__link-in-text js-hide-link">Скрыть</a>
         <div class="request-item__person">
-          <div class="request-item__person-img" style="background-image: url('img/volonter/user/user-1.jpg');"></div>
+          <div class="request-item__person-img" style="background-image: url('img/volonter/user/user-1.jpg');">
+            <div class="request-item__img-icon"><i class="fa fa-check"></i></div>
+            <div class="request-item__tooltip">Lorem ipsum dolor.</div>
+          </div>
           <div class="request-item__person-name">
             Алексей Д. М.
             <span>Добавлено: 5 минут назад</span>
@@ -675,7 +702,10 @@
         <a href="#" class="request-item_big__link request-item_big__link-in-text js-show-link">Читать Далее</a>
         <a href="#" class="request-item_big__link request-item_big__link-in-text js-hide-link">Скрыть</a>
         <div class="request-item__person">
-          <div class="request-item__person-img" style="background-image: url('img/volonter/user/user-1.jpg');"></div>
+          <div class="request-item__person-img" style="background-image: url('img/volonter/user/user-1.jpg');">
+            <div class="request-item__img-icon"><i class="fa fa-check"></i></div>
+            <div class="request-item__tooltip">Lorem ipsum dolor.</div>
+          </div>
           <div class="request-item__person-name">
             Алексей Д. М.
             <span>Добавлено: 5 минут назад</span>
@@ -750,7 +780,10 @@
         <a href="#" class="request-item_big__link request-item_big__link-in-text js-show-link">Читать Далее</a>
         <a href="#" class="request-item_big__link request-item_big__link-in-text js-hide-link">Скрыть</a>
         <div class="request-item__person">
-          <div class="request-item__person-img" style="background-image: url('img/volonter/user/user-1.jpg');"></div>
+          <div class="request-item__person-img" style="background-image: url('img/volonter/user/user-1.jpg');">
+            <div class="request-item__img-icon"><i class="fa fa-check"></i></div>
+            <div class="request-item__tooltip">Lorem ipsum dolor.</div>
+          </div>
           <div class="request-item__person-name">
             Алексей Д. М.
             <span>Добавлено: 5 минут назад</span>
@@ -821,7 +854,10 @@
         <a href="#" class="request-item_big__link request-item_big__link-in-text js-show-link">Читать Далее</a>
         <a href="#" class="request-item_big__link request-item_big__link-in-text js-hide-link">Скрыть</a>
         <div class="request-item__person">
-          <div class="request-item__person-img" style="background-image: url('img/volonter/user/user-1.jpg');"></div>
+          <div class="request-item__person-img" style="background-image: url('img/volonter/user/user-1.jpg');">
+            <div class="request-item__img-icon"><i class="fa fa-check"></i></div>
+            <div class="request-item__tooltip">Lorem ipsum dolor.</div>
+          </div>
           <div class="request-item__person-name">
             Алексей Д. М.
             <span>Добавлено: 5 минут назад</span>
@@ -892,7 +928,10 @@
         <a href="#" class="request-item_big__link request-item_big__link-in-text js-show-link">Читать Далее</a>
         <a href="#" class="request-item_big__link request-item_big__link-in-text js-hide-link">Скрыть</a>
         <div class="request-item__person">
-          <div class="request-item__person-img" style="background-image: url('img/volonter/user/user-1.jpg');"></div>
+          <div class="request-item__person-img" style="background-image: url('img/volonter/user/user-1.jpg');">
+            <div class="request-item__img-icon"><i class="fa fa-check"></i></div>
+            <div class="request-item__tooltip">Lorem ipsum dolor.</div>
+          </div>
           <div class="request-item__person-name">
             Алексей Д. М.
             <span>Добавлено: 5 минут назад</span>
@@ -963,7 +1002,10 @@
         <a href="#" class="request-item_big__link request-item_big__link-in-text js-show-link">Читать Далее</a>
         <a href="#" class="request-item_big__link request-item_big__link-in-text js-hide-link">Скрыть</a>
         <div class="request-item__person">
-          <div class="request-item__person-img" style="background-image: url('img/volonter/user/user-1.jpg');"></div>
+          <div class="request-item__person-img" style="background-image: url('img/volonter/user/user-1.jpg');">
+            <div class="request-item__img-icon"><i class="fa fa-check"></i></div>
+            <div class="request-item__tooltip">Lorem ipsum dolor.</div>
+          </div>
           <div class="request-item__person-name">
             Алексей Д. М.
             <span>Добавлено: 5 минут назад</span>
@@ -1034,7 +1076,10 @@
         <a href="#" class="request-item_big__link request-item_big__link-in-text js-show-link">Читать Далее</a>
         <a href="#" class="request-item_big__link request-item_big__link-in-text js-hide-link">Скрыть</a>
         <div class="request-item__person">
-          <div class="request-item__person-img" style="background-image: url('img/volonter/user/user-1.jpg');"></div>
+          <div class="request-item__person-img" style="background-image: url('img/volonter/user/user-1.jpg');">
+            <div class="request-item__img-icon"><i class="fa fa-check"></i></div>
+            <div class="request-item__tooltip">Lorem ipsum dolor.</div>
+          </div>
           <div class="request-item__person-name">
             Алексей Д. М.
             <span>Добавлено: 5 минут назад</span>
