--- a/src/partials/catalog-list.html
+++ b/src/partials/catalog-list.html
@@ -40,12 +40,14 @@
         <a href="#">
           <img src="img/svg-icons/tablet-check.svg" alt="" width="16" height="20">
           <span>12</span>
+          <span class="tooltip">Lorem ipsum dolor.</span>
         </a>
       </div>
       <div class="catalog-item__rating-block">
         <a href="#">
           <img src="img/svg-icons/thumb-up.svg" alt="" width="21" height="20">
           <span>12</span>
+          <span class="tooltip">Lorem ipsum dolor.</span>
         </a>
       </div>
     </div>
@@ -56,6 +58,7 @@
         <a href="#">
           <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24" height="20" viewBox="0 0 24 20"><defs><path id="nrtza" d="M499 4259h23.33v19.95H499z"/><path id="nrtzc" d="M519.09 4259a3.26 3.26 0 0 1 3.24 3.26v9.31c0 1.8-1.45 3.26-3.24 3.26h-.86v3.65a.48.48 0 0 1-.47.47.47.47 0 0 1-.31-.1l-4.73-4.02h-10.48a3.26 3.26 0 0 1-3.24-3.26v-9.3c0-1.8 1.46-3.27 3.24-3.27h16.85m-.8 11.43c.27 0 .48-.21.48-.48a.47.47 0 0 0-.48-.47h-15.25a.47.47 0 0 0-.47.48c0 .26.2.47.47.47h15.25m0-3.05c.27 0 .48-.21.48-.47a.47.47 0 0 0-.48-.48h-15.25a.47.47 0 0 0-.47.48c0 .26.2.47.47.47h15.25m0-3.05c.27 0 .48-.21.48-.47a.47.47 0 0 0-.48-.48h-15.25a.47.47 0 0 0-.47.48c0 .26.2.47.47.47h15.25"/><clipPath id="nrtzb"><use xlink:href="#nrtza"/></clipPath></defs><g><g transform="translate(-499 -4259)"><g/><g clip-path="url(#nrtzb)"><use fill="#9b9b9b" xlink:href="#nrtzc"/></g></g></g></svg>
           <span>12</span>
+          <span class="tooltip">Lorem ipsum dolor.</span>
         </a>
       </div>
     </div>
@@ -71,8 +74,9 @@
   <!-- begin catalog-item -->
   <div class="catalog-item js-open-popup" data-link="popup-catalog">
     <div class="catalog-item__person">
-      <div class="catalog-item__img" style="background-image: url('img/volonter/user/user-catalog-2.jpg');">
+      <div class="catalog-item__img" style="background-image: url('img/volonter/user/user-catalog-1.jpg');">
         <div class="catalog-item__img-icon"><i class="fa fa-check"></i></div>
+        <div class="catalog-item__tooltip">Волонтер, прикрепивший паспорт</div>
       </div>
       <div class="catalog-item__name">Иван Иванов</div>
     </div>
@@ -98,12 +102,14 @@
         <a href="#">
           <img src="img/svg-icons/tablet-check.svg" alt="" width="16" height="20">
           <span>12</span>
+          <span class="tooltip">Lorem ipsum dolor.</span>
         </a>
       </div>
       <div class="catalog-item__rating-block">
         <a href="#">
           <img src="img/svg-icons/thumb-up.svg" alt="" width="21" height="20">
           <span>12</span>
+          <span class="tooltip">Lorem ipsum dolor.</span>
         </a>
       </div>
     </div>
@@ -114,6 +120,7 @@
         <a href="#">
           <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24" height="20" viewBox="0 0 24 20"><defs><path id="nrtza" d="M499 4259h23.33v19.95H499z"/><path id="nrtzc" d="M519.09 4259a3.26 3.26 0 0 1 3.24 3.26v9.31c0 1.8-1.45 3.26-3.24 3.26h-.86v3.65a.48.48 0 0 1-.47.47.47.47 0 0 1-.31-.1l-4.73-4.02h-10.48a3.26 3.26 0 0 1-3.24-3.26v-9.3c0-1.8 1.46-3.27 3.24-3.27h16.85m-.8 11.43c.27 0 .48-.21.48-.48a.47.47 0 0 0-.48-.47h-15.25a.47.47 0 0 0-.47.48c0 .26.2.47.47.47h15.25m0-3.05c.27 0 .48-.21.48-.47a.47.47 0 0 0-.48-.48h-15.25a.47.47 0 0 0-.47.48c0 .26.2.47.47.47h15.25m0-3.05c.27 0 .48-.21.48-.47a.47.47 0 0 0-.48-.48h-15.25a.47.47 0 0 0-.47.48c0 .26.2.47.47.47h15.25"/><clipPath id="nrtzb"><use xlink:href="#nrtza"/></clipPath></defs><g><g transform="translate(-499 -4259)"><g/><g clip-path="url(#nrtzb)"><use fill="#9b9b9b" xlink:href="#nrtzc"/></g></g></g></svg>
           <span>12</span>
+          <span class="tooltip">Lorem ipsum dolor.</span>
         </a>
       </div>
     </div>
@@ -127,8 +134,9 @@
   <!-- begin catalog-item -->
   <div class="catalog-item js-open-popup" data-link="popup-catalog">
     <div class="catalog-item__person">
-      <div class="catalog-item__img" style="background-image: url('img/volonter/user/user-catalog-2.jpg');">
+      <div class="catalog-item__img" style="background-image: url('img/volonter/user/user-catalog-1.jpg');">
         <div class="catalog-item__img-icon"><i class="fa fa-check"></i></div>
+        <div class="catalog-item__tooltip">Волонтер, прикрепивший паспорт</div>
       </div>
       <div class="catalog-item__name">Иван Иванов</div>
     </div>
@@ -154,12 +162,14 @@
         <a href="#">
           <img src="img/svg-icons/tablet-check.svg" alt="" width="16" height="20">
           <span>12</span>
+          <span class="tooltip">Lorem ipsum dolor.</span>
         </a>
       </div>
       <div class="catalog-item__rating-block">
         <a href="#">
           <img src="img/svg-icons/thumb-up.svg" alt="" width="21" height="20">
           <span>12</span>
+          <span class="tooltip">Lorem ipsum dolor.</span>
         </a>
       </div>
     </div>
@@ -170,6 +180,7 @@
         <a href="#">
           <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24" height="20" viewBox="0 0 24 20"><defs><path id="nrtza" d="M499 4259h23.33v19.95H499z"/><path id="nrtzc" d="M519.09 4259a3.26 3.26 0 0 1 3.24 3.26v9.31c0 1.8-1.45 3.26-3.24 3.26h-.86v3.65a.48.48 0 0 1-.47.47.47.47 0 0 1-.31-.1l-4.73-4.02h-10.48a3.26 3.26 0 0 1-3.24-3.26v-9.3c0-1.8 1.46-3.27 3.24-3.27h16.85m-.8 11.43c.27 0 .48-.21.48-.48a.47.47 0 0 0-.48-.47h-15.25a.47.47 0 0 0-.47.48c0 .26.2.47.47.47h15.25m0-3.05c.27 0 .48-.21.48-.47a.47.47 0 0 0-.48-.48h-15.25a.47.47 0 0 0-.47.48c0 .26.2.47.47.47h15.25m0-3.05c.27 0 .48-.21.48-.47a.47.47 0 0 0-.48-.48h-15.25a.47.47 0 0 0-.47.48c0 .26.2.47.47.47h15.25"/><clipPath id="nrtzb"><use xlink:href="#nrtza"/></clipPath></defs><g><g transform="translate(-499 -4259)"><g/><g clip-path="url(#nrtzb)"><use fill="#9b9b9b" xlink:href="#nrtzc"/></g></g></g></svg>
           <span>12</span>
+          <span class="tooltip">Lorem ipsum dolor.</span>
         </a>
       </div>
     </div>
