--- a/src/sass/new-styles-2/_catalog.sass
+++ b/src/sass/new-styles-2/_catalog.sass
@@ -268,6 +268,7 @@
     display: flex
     justify-content: flex-start
     align-items: center
+    cursor: pointer
     +r2
       width: 100%
       border-bottom: 1px solid  $gray
