--- a/src/sass/new-styles-2/_main.sass
+++ b/src/sass/new-styles-2/_main.sass
@@ -253,6 +253,7 @@
   padding-left: 10px
   padding-right: 10px
   margin-bottom: 63px
+  cursor: pointer
   +r3
     margin-bottom: 34px
   &__img
@@ -307,6 +308,7 @@
     justify-content: space-between
     flex-wrap: wrap
     width: 100%
+    cursor: default
     +r3
       margin-bottom: 45px
       .helper__img
