--- a/src/sass/new-style-2.sass
+++ b/src/sass/new-style-2.sass
@@ -116,6 +116,7 @@ $gray: #d8d8d8
   border-radius: 3px
   box-shadow: 0 1px 10px rgba(0, 0, 0, 0.2)
   display: none
+  text-align: left
 
 .h1
   &_md
