--- a/src/sass/new-styles-2/_catalog.sass
+++ b/src/sass/new-styles-2/_catalog.sass
@@ -385,7 +385,7 @@
       padding-left: 10px
   &__tooltip
     position: absolute
-    top: -54px
+    bottom: calc(100% + 12px)
     left: -14px
     padding: 10px 15px
     background-color: #fff
@@ -396,6 +396,7 @@
     border-radius: 3px
     box-shadow: 0 1px 10px rgba(0, 0, 0, 0.2)
     display: none
+    z-index: 1
   &__head-mob-item
     display: none !important
     color: #9b9b9b
