--- a/src/sass/new-style-2.sass
+++ b/src/sass/new-style-2.sass
@@ -104,7 +104,8 @@ $gray: #d8d8d8
 
 =tooltip
   position: absolute
-  top: -50px
+  top: auto
+  bottom: calc(100% + 12px)
   left: 50%
   transform: translate(-50%, 0)
   padding: 10px 15px
@@ -117,6 +118,7 @@ $gray: #d8d8d8
   box-shadow: 0 1px 10px rgba(0, 0, 0, 0.2)
   display: none
   text-align: left
+  z-index: 1
 
 .h1
   &_md
